# SpotifyPico

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/display/: GUI_Paint.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  spotify.c  spotify.h
src/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
src/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
src/lib/: Makefile  cmake_install.cmake
src/lib/Pico_code/c/: Makefile  cmake_install.cmake  main.dis  main.elf  main.elf.map  main.hex  main.uf2
src/lib/Pico_code/c/examples/: Makefile  cmake_install.cmake
src/lib/Pico_code/c/pico-sdk/: Makefile  cmake_install.cmake
src/lib/pico-sdk/: Makefile
src/pico-sdk/: Makefile  cmake_install.cmake
src/pico-sdk/docs/: Makefile  cmake_install.cmake
src/pico-sdk/src/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_stdlib/: Makefile  cmake_install.cmake
src/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
src/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
src/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
src/pico-sdk/tools/: Makefile  cmake_install.cmake
src/src/: Makefile  SpotifyPico.dis  SpotifyPico.elf  SpotifyPico.elf.map  SpotifyPico.hex  SpotifyPico.uf2  cmake_install.cmake
src/src/elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt  ELF2UF2Build-mkdirs.cmake
(+144 files in other folders)
